# ritual-pr-infra

./: .gitignore  COST_ANALYSIS.md  IMPLEMENTATION.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: test_cost_calculator.py
src/ritual_pr_infra/: __init__.py  cli.py  generator.py
src/ritual_pr_infra/cost_analysis/: claude_pricing.py  log_parser.py
src/ritual_pr_infra/templates/: README.md  config.yml
src/ritual_pr_infra/templates/prompts/: code-hygiene.md  engineering.md  fsm-verification.md  performance.md  quality.md  security.md
src/ritual_pr_infra/templates/workflows/: claude-pr-review.yml.j2  devin-pr-review.yml.j2  manus-pr-review.yml.j2
tests/: test_generator.py
